add feature with NavigationView and add PsalmActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
             android:name=".settings.Settings"
             android:label="Настройки">
         </activity>
+        <activity android:name=".view.PsalmActivity"/>
 
     </application>
 
