--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         <activity
             android:name=".view.main.MainActivity"
             android:label="@string/app_name"
+            android:launchMode="singleInstance"
+            android:clearTaskOnLaunch="true"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
