--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,10 +27,18 @@
 
         <activity
             android:name=".settings.Settings"
+            android:launchMode="singleTop"
             android:label="Настройки">
         </activity>
         <activity
             android:name=".view.PsalmActivity"
+            android:launchMode="singleTop"
+
+            android:theme="@style/AppTheme.NoActionBar"/>
+
+        <activity
+            android:name=".view.PsalmTabsActivity"
+            android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar"/>
 
     </application>
