empty icons activity add

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,8 @@
             android:name=".view.PsalmTabsActivity"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".view.IconActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
 
     </application>
 
