--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,9 @@ dependencies {
     implementation 'com.android.support:support-vector-drawable:27.0.2'
     implementation 'com.android.support:recyclerview-v7:27.0.2'
     implementation 'com.github.bumptech.glide:glide:4.5.0'
+    implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
+    compile 'jp.wasabeef:glide-transformations:3.0.1'
     compile 'com.android.support:cardview-v7:27.0.2'
     compile 'org.anasthase:android-seekbar-preference:1.2'
     testImplementation 'junit:junit:4.12'
